GearsetPOC/force-app/main/default/objects/Stations__c/Stations__c.object-meta.xml
<CustomObject>
    <description>Eurostar&#39;s stations</description>
    <label>Station</label>
    <nameField>
        <label>Stations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>