GearsetPOC/force-app/main/default/objects/Stations__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checked if the Stations is used by Eurostar
Unchecked if not</description>
    <inlineHelpText>Checked if the Stations is used by Eurostar
Unchecked if not</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>