GearsetPOC/force-app/main/default/objects/Stations__c/fields/Contact_Times__c.field-meta.xml
<CustomField>
    <fullName>Contact_Times__c</fullName>
    <label>Contact Times</label>
    <length>255</length>
    <type>Text</type>
</CustomField>