GearsetPOC/force-app/main/default/objects/Stations__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GBR</fullName>
                <label>United Kingdom</label>
            </value>
            <value>
                <fullName>FRA</fullName>
                <label>France</label>
            </value>
            <value>
                <fullName>BEL</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>DEU</fullName>
                <label>Germany</label>
            </value>
            <value>
                <fullName>NLD</fullName>
                <label>Netherlands</label>
            </value>
            <value>
                <fullName>CHE</fullName>
                <label>Switzerland</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>