GearsetPOC/force-app/main/default/objects/Stations__c/fields/de_country_name__c.field-meta.xml
<CustomField>
    <fullName>de_country_name__c</fullName>
    <label>de country name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>