GearsetPOC/force-app/main/default/objects/Stations__c/fields/Dutch_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Dutch_Country_Name__c</fullName>
    <description>Dutch translation of country</description>
    <label>Dutch Country Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nederland</fullName>
            </value>
            <value>
                <fullName>Verenigd Koninkrijk</fullName>
            </value>
            <value>
                <fullName>Frankrijk</fullName>
            </value>
            <value>
                <fullName>België</fullName>
            </value>
            <value>
                <fullName>Duitsland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>