GearsetPOC/force-app/main/default/objects/Stations__c/fields/Dutch_Station_Name__c.field-meta.xml
<CustomField>
    <fullName>Dutch_Station_Name__c</fullName>
    <description>Dutch translation of station name</description>
    <label>Dutch Station Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>