GearsetPOC/force-app/main/default/objects/Stations__c/fields/en_country_name__c.field-meta.xml
<CustomField>
    <fullName>en_country_name__c</fullName>
    <label>en country name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>