GearsetPOC/force-app/main/default/objects/Stations__c/fields/en_Station_Name__c.field-meta.xml
<CustomField>
    <fullName>en_Station_Name__c</fullName>
    <label>English Station Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>