GearsetPOC/force-app/main/default/objects/Stations__c/fields/fr_country_name__c.field-meta.xml
<CustomField>
    <fullName>fr_country_name__c</fullName>
    <label>fr country name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>