GearsetPOC/force-app/main/default/objects/Stations__c/fields/fr_Station_Name__c.field-meta.xml
<CustomField>
    <fullName>fr_Station_Name__c</fullName>
    <description>Translation of Station Name</description>
    <label>French Station Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>