GearsetPOC/force-app/main/default/objects/Stations__c/fields/French_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>French_Country_Name__c</fullName>
    <description>French translation for country</description>
    <label>French Country Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Royaume-uni</fullName>
            </value>
            <value>
                <fullName>Belgique</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Allemagne</fullName>
            </value>
            <value>
                <fullName>Pays-Bas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>