GearsetPOC/force-app/main/default/objects/Stations__c/fields/Full_Station_s_name__c.field-meta.xml
<CustomField>
    <fullName>Full_Station_s_name__c</fullName>
    <description>Full name of the station</description>
    <externalId>true</externalId>
    <inlineHelpText>Full name of the station</inlineHelpText>
    <label>Full Station&#39;s name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>