GearsetPOC/force-app/main/default/objects/Stations__c/fields/German_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>German_Country_Name__c</fullName>
    <label>German Country Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vereinigtes Königreich</fullName>
            </value>
            <value>
                <fullName>Deutschland</fullName>
            </value>
            <value>
                <fullName>Niederlande</fullName>
            </value>
            <value>
                <fullName>Frankreich</fullName>
            </value>
            <value>
                <fullName>Belgien</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>