GearsetPOC/force-app/main/default/objects/Stations__c/fields/German_Station_Name__c.field-meta.xml
<CustomField>
    <fullName>German_Station_Name__c</fullName>
    <label>German Station Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>