GearsetPOC/force-app/main/default/objects/Stations__c/fields/Group_Active__c.field-meta.xml
<CustomField>
    <fullName>Group_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want this destination to be displayed on the Group Booking Form</inlineHelpText>
    <label>Group Active</label>
    <type>Checkbox</type>
</CustomField>