GearsetPOC/force-app/main/default/objects/Stations__c/fields/Metafour_Compatible__c.field-meta.xml
<CustomField>
    <fullName>Metafour_Compatible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metafour Compatible</label>
    <type>Checkbox</type>
</CustomField>