GearsetPOC/force-app/main/default/objects/Stations__c/fields/nl_country_name__c.field-meta.xml
<CustomField>
    <fullName>nl_country_name__c</fullName>
    <label>nl country name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>