GearsetPOC/force-app/main/default/objects/Stations__c/fields/NS_Customer_Care__c.field-meta.xml
<CustomField>
    <fullName>NS_Customer_Care__c</fullName>
    <label>NS Customer Care</label>
    <length>255</length>
    <type>Text</type>
</CustomField>