GearsetPOC/force-app/main/default/objects/Stations__c/fields/Original_Station__c.field-meta.xml
<CustomField>
    <fullName>Original_Station__c</fullName>
    <label>Original Station</label>
    <length>3</length>
    <type>Text</type>
</CustomField>