GearsetPOC/force-app/main/default/objects/Stations__c/fields/Popular_Destination__c.field-meta.xml
<CustomField>
    <fullName>Popular_Destination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Popular Destination</label>
    <type>Checkbox</type>
</CustomField>