GearsetPOC/force-app/main/default/objects/Stations__c/fields/Station_Code_3_Letter__c.field-meta.xml
<CustomField>
    <fullName>Station_Code_3_Letter__c</fullName>
    <label>Station Code(3 Letter)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>