GearsetPOC/force-app/main/default/objects/Stations__c/fields/Station_Code_5_Letter__c.field-meta.xml
<CustomField>
    <fullName>Station_Code_5_Letter__c</fullName>
    <externalId>true</externalId>
    <label>Station Code(5 Letter)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>