GearsetPOC/force-app/main/default/objects/Stations__c/fields/Terminal_Control__c.field-meta.xml
<CustomField>
    <fullName>Terminal_Control__c</fullName>
    <label>Terminal Control</label>
    <length>255</length>
    <type>Text</type>
</CustomField>