GearsetPOC/force-app/main/default/objects/Stations__c/fields/UIC_Code__c.field-meta.xml
<CustomField>
    <fullName>UIC_Code__c</fullName>
    <externalId>true</externalId>
    <label>UIC Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>