GearsetPOC/force-app/main/default/objects/Stations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Full_Station_s_name__c</columns>
    <columns>UIC_Code__c</columns>
    <columns>Active__c</columns>
    <columns>Group_Active__c</columns>
    <columns>Popular_Destination__c</columns>
    <columns>Station_Code_3_Letter__c</columns>
    <columns>Station_Code_5_Letter__c</columns>
    <columns>Original_Station__c</columns>
    <columns>Country__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>DEU,Germany</value>
    </filters>
    <label>All</label>
</ListView>