GearsetPOC/force-app/main/default/objects/Stations__c/listViews/All_original_stations.listView-meta.xml
<ListView>
    <fullName>All_original_stations</fullName>
    <columns>NAME</columns>
    <columns>Full_Station_s_name__c</columns>
    <columns>Active__c</columns>
    <columns>Group_Active__c</columns>
    <columns>Popular_Destination__c</columns>
    <columns>Station_Code_3_Letter__c</columns>
    <columns>Original_Station__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Original_Station__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All-original stations</label>
    <language>en_US</language>
</ListView>