GearsetPOC/force-app/main/default/objects/Stations__c/listViews/Assistance_Stations.listView-meta.xml
<ListView>
    <fullName>Assistance_Stations</fullName>
    <columns>NAME</columns>
    <columns>Terminal_Control__c</columns>
    <columns>Duty_Manager_Shift_Leader__c</columns>
    <columns>NS_Customer_Care__c</columns>
    <columns>Contact_Times__c</columns>
    <columns>Contractor__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <label>Assistance Stations</label>
    <language>en_US</language>
</ListView>