GearsetPOC/force-app/main/default/objects/Stations__c/listViews/Stations_View.listView-meta.xml
<ListView>
    <fullName>Stations_View</fullName>
    <columns>NAME</columns>
    <columns>Full_Station_s_name__c</columns>
    <filterScope>Everything</filterScope>
    <label>Stations&#39; View</label>
    <language>en_US</language>
</ListView>